--- a/Shopping-mall/package.json
+++ b/Shopping-mall/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "sass": "^1.62.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
   }
