--- a/Shopping-mall/package.json
+++ b/Shopping-mall/package.json
@@ -10,14 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
+    "graphql-tag": "^2.12.6",
+    "msw": "0.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "uuid": "^9.0.1",
+    "vite-plugin-next-react-router": "^0.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
@@ -27,5 +34,8 @@
     "sass": "^1.62.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
